--- a/simple-stack/Pulumi.yaml
+++ b/simple-stack/Pulumi.yaml
@@ -2,4 +2,4 @@ name: simple-stack
 description: A minimal TypeScript Pulumi program
 runtime: nodejs
 config:
-  petLength: 3
+  simple-stack:petLength: 3
