--- a/simple-stack/Pulumi.yaml
+++ b/simple-stack/Pulumi.yaml
@@ -1,5 +1,5 @@
 name: simple-stack
 description: A minimal TypeScript Pulumi program
 runtime: nodejs
-config:
-  simple-stack:petLength: 3
+# config:
+#   simple-stack:petLength: 3
