--- a/simple-stack/Pulumi.yaml
+++ b/simple-stack/Pulumi.yaml
@@ -3,3 +3,4 @@ description: A minimal TypeScript Pulumi program
 runtime: nodejs
 config:
   simple-stack:petLength: 8
+  simple-stack:petNameSeparator: *
