--- a/ts-aws-api-lambda-eventbridge-lambda-dynamodb/lambda-eventbridge-dyndb/Pulumi.yaml
+++ b/ts-aws-api-lambda-eventbridge-lambda-dynamodb/lambda-eventbridge-dyndb/Pulumi.yaml
@@ -1,6 +1,6 @@
-name: lambda-eventbridge-dyndb
+name: deployment-lambda-eventbridge-dyndb
 runtime: nodejs
 description: A TS Pulumi project that deploys a system consisting of a lambda->eventbridge->lambda->dynamodb architecture.
 config:
   aws:region: us-east-1
-  lambda-eventbridge-dyndb:apiGwProject: api-gateway
+  deployment-lambda-eventbridge-dyndb:apiGwProject: deployment-api-gateway
