--- a/ts-aws-api-lambda-eventbridge-lambda-dynamodb/lambda-eventbridge-dyndb/Pulumi.yaml
+++ b/ts-aws-api-lambda-eventbridge-lambda-dynamodb/lambda-eventbridge-dyndb/Pulumi.yaml
@@ -4,3 +4,4 @@ description: A TS Pulumi project that deploys a system consisting of a lambda->e
 config:
   aws:region: us-east-1
   deployment-lambda-eventbridge-dyndb:apiGwProject: deployment-api-gateway
+  newrelic:accountId: 2318745
