--- a/simple-stack/Pulumi.yaml
+++ b/simple-stack/Pulumi.yaml
@@ -2,5 +2,5 @@ name: simple-stack
 description: A minimal TypeScript Pulumi program
 runtime: nodejs
 config:
-  simple-stack:petLength: 8
-  simple-stack:petNameSeparator: '--'
+  simple-stack:petLength: 7
+  simple-stack:petNameSeparator: '+'
