--- a/ts-aws-api-lambda-eventbridge-lambda-dynamodb/api-gateway/Pulumi.yaml
+++ b/ts-aws-api-lambda-eventbridge-lambda-dynamodb/api-gateway/Pulumi.yaml
@@ -3,3 +3,6 @@ runtime: nodejs
 description: A TS Pulumi project that deploys an AWS API Gateway.
 config:
   aws:region: us-east-1
+  deployment-api-gateway:downstreamProject: deployment-lambda-eventbridge-dyndb
+  deployment-api-gateway:gwDescription: "Deployment demo API"
+
