--- a/ts-aws-api-lambda-eventbridge-lambda-dynamodb/api-gateway/package.json
+++ b/ts-aws-api-lambda-eventbridge-lambda-dynamodb/api-gateway/package.json
@@ -4,6 +4,7 @@
         "@types/node": "^10.0.0"
     },
     "dependencies": {
+        "@pulumi/auto-deploy": "^0.0.4",
         "@pulumi/aws": "^5.0.0",
         "@pulumi/pulumi": "^3.0.0",
         "@pulumi/pulumiservice": "^0.2.0"
