--- a/ts-aws-api-lambda-eventbridge-lambda-dynamodb/lambda-eventbridge-dyndb/package.json
+++ b/ts-aws-api-lambda-eventbridge-lambda-dynamodb/lambda-eventbridge-dyndb/package.json
@@ -4,9 +4,10 @@
         "@types/node": "^10.17.51"
     },
     "dependencies": {
+        "@pulumi/auto-deploy": "^0.0.4",
         "@pulumi/aws": "^5.0.0",
+        "@pulumi/newrelic": "^5.0.0",
         "@pulumi/pulumi": "^3.0.0",
-        "@pulumi/pulumiservice": "^0.2.0",
-        "@pulumi/newrelic": "^5.0.0"
+        "@pulumi/pulumiservice": "^0.2.0"
     }
 }
