--- a/ts-aws-api-lambda-eventbridge-lambda-dynamodb/api-gateway/Pulumi.yaml
+++ b/ts-aws-api-lambda-eventbridge-lambda-dynamodb/api-gateway/Pulumi.yaml
@@ -4,5 +4,5 @@ description: A TS Pulumi project that deploys an AWS API Gateway.
 config:
   aws:region: us-east-1
   deployment-api-gateway:nameBase: demo-deploy
-  deployment-api-gateway:gwDescription: "Deployment demo API dev"
+  deployment-api-gateway:gwDescription: "Deployment demo API dev test"
 
