--- a/aws-serverless-piers/Pulumi.yaml
+++ b/aws-serverless-piers/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: piers-aws-serverless
+name: aws-serverless
 runtime: nodejs
 description: A TypeScript program to deploy a serverless application on AWS
