--- a/mitch-webserver/Pulumi.dev.yaml
+++ b/mitch-webserver/Pulumi.dev.yaml
@@ -1,3 +1,5 @@
+environment:
+- aws-oidc
 config:
   pulumi:template: https://github.com/pulumi-demos/examples/python/aws-webserver
   aws-webserver:instance_count: 1
