Added aws:profile to try to get this breaking like the customer

--- a/aws-serverless-piers/Pulumi.dev.yaml
+++ b/aws-serverless-piers/Pulumi.dev.yaml
@@ -1,5 +1,6 @@
 config:
   aws:region: eu-west-1
+  aws:profile: pulumi
   pulumi:template: https://github.com/pulumi-demos/private-templates/typescript/aws-serverless
 environment:
   - aws-oidc
