--- a/aws-serverless-piers/package.json
+++ b/aws-serverless-piers/package.json
@@ -4,7 +4,7 @@
 	    "@types/node": "^16"
     },
     "dependencies": {
-	    "@pulumi/aws": "^6.5.0",
+	    "@pulumi/aws": "5.42.0",
 	    "@pulumi/pulumi": "^3.49.0",
 	    "typescript": "^4.0.0"
     }
