--- a/aws-serverless/Pulumi.yaml
+++ b/aws-serverless/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: aws-serverless-pk
+name: esc-login-test
 runtime: nodejs
 description: A TypeScript program to deploy a serverless application on AWS
